--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 <header>
   <div class="logo">حفلات ومناسبات</div>
   <nav>
-    <a href="contact.html">تواصل معنا</a>
-    <a href="about.html">من نحن</a>
     <a href="#karasy">تأجير كراسي</a>
     <a href="#kanab">تأجير كنب</a>
     <a href="#samaat">تأجير مكبرات صوت</a>
     <a href="#khiyam">تأجير خيام</a>
     <a href="#jalsat">تأجير جلسات شعبية</a>
     <a href="#dhiyafah">قهوجيين وصبابين</a>
+    <a href="contact.html">تواصل معنا</a>
+    <a href="about.html">من نحن</a>
   </nav>
 </header>
 
@@ -159,11 +159,27 @@
 
 <h1>تأجير طاولات وكراسي وتأجير كنب ومستلزمات الحفلات والمناسبات في الرياض</h1>
 
-<div class="contact-buttons" style="text-align: center; margin: 15px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" style="margin: 0 10px;">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+<div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
+  </a>
+</div>
   <a href="tel:0559534118" style="margin: 0 10px;">
     <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
   </a>
@@ -193,27 +209,36 @@
 تأجير كراسي ملكيه 
 تأجير كراسي شفافة
     </p>
-    <div class="contact-buttons">
-     <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
 
  <!- تأجير طاولات وكراسي -->
   <section id="samaat" class="service">
@@ -275,27 +300,36 @@
 ايجار طاولات وكراسي حفلات  
 خصم 30% علي تأجير زل وكراسي حفلات
     </p>
-    <div class="contact-buttons">
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-     <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   
   <!-- تأجير كنب -->
   <section id="kanab" class="service">
@@ -322,27 +356,36 @@
 كيفية التواصل معنا
 لأننا دائماً نهتم براحة العملاء فإننا نقوم بتيسير عملية التواصل معنا. لهذا يمكنك الحصول على اى خدمة من الخدمات التى نعمل على تقديمها بمنتهى السهولة واليسر. لأن شركة النيزك افضل شركة تعمل على تنسيق وتنظيم الحفلات وتقوم بتوفير كل مايحتاجه العرائس فى حفلة الزفاف. لهذا لا عليك سوى القيام بالاتصال على أرقامنا وطلب الخدمات التى تحتاج اليها وسنعمل على مساعدتك فى اسرع وقت وبأقل الاسعار.لأن شركتنا هى الافضل والارخص على مستوى المملكة.
     </p>
-    <div class="contact-buttons">
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-   <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
 
   <!-- تأجير مكبرات صوت -->
   <section id="samaat" class="service">
@@ -395,27 +438,36 @@
 ارقام تاجير سماعات الدمام والخبر 
 تاجير سماعات بلوتوث للحفلات
     </p>
-    <div class="contact-buttons">
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
 
   <!-- تأجير خيام -->
   <section id="khiyam" class="service">
@@ -494,27 +546,36 @@
 تاجير خيام اوربيه حفلات بالخبر
 خيام مناسبات للايجار
     </p>
-    <div class="contact-buttons">
-   <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
 
   <!-- تأجير جلسات شعبية -->
   <section id="jalsat" class="service">
@@ -544,27 +605,36 @@
 تأجير جلسات مرتفعة 
 تأجير جلسات ارضيه
     </p>
-    <div class="contact-buttons">
-     <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+<div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
 
   <!-- قهوجيين وصبابين -->
   <section id="dhiyafah" class="service">
@@ -589,27 +659,36 @@
 صبابات 
 ضيافه
     </p>
-    <div class="contact-buttons">
-    <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      alt="واتساب" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  <a href="tel:0559534118" aria-label="اتصال مباشر">
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      alt="اتصال" 
+      width="48" 
+      height="48" 
+      style="cursor: pointer;"
+    />
   </a>
 </div>
-     <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
-  </a>
 
-  <a href="tel:0559534118">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
-    </div>
-  </section>
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
 
 </main>
 
