--- a/index.html
+++ b/index.html
@@ -158,32 +158,40 @@
 <main>
 
 <h1>تأجير طاولات وكراسي وتأجير كنب ومستلزمات الحفلات والمناسبات في الرياض</h1>
-
-<div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+<div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
-  <a href="tel:0559534118" style="margin: 0 10px;">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
-  </a>
-</div>
+
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
+style="margin: 0 10px;">
+  
 
   <!-- تأجير كراسي -->
   <section id="karasy" class="service">
@@ -209,29 +217,38 @@
 تأجير كراسي ملكيه 
 تأجير كراسي شفافة
     </p>
-   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
@@ -300,29 +317,38 @@
 ايجار طاولات وكراسي حفلات  
 خصم 30% علي تأجير زل وكراسي حفلات
     </p>
-   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
@@ -356,29 +382,38 @@
 كيفية التواصل معنا
 لأننا دائماً نهتم براحة العملاء فإننا نقوم بتيسير عملية التواصل معنا. لهذا يمكنك الحصول على اى خدمة من الخدمات التى نعمل على تقديمها بمنتهى السهولة واليسر. لأن شركة النيزك افضل شركة تعمل على تنسيق وتنظيم الحفلات وتقوم بتوفير كل مايحتاجه العرائس فى حفلة الزفاف. لهذا لا عليك سوى القيام بالاتصال على أرقامنا وطلب الخدمات التى تحتاج اليها وسنعمل على مساعدتك فى اسرع وقت وبأقل الاسعار.لأن شركتنا هى الافضل والارخص على مستوى المملكة.
     </p>
-   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
@@ -438,29 +473,38 @@
 ارقام تاجير سماعات الدمام والخبر 
 تاجير سماعات بلوتوث للحفلات
     </p>
-   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
@@ -546,29 +590,38 @@
 تاجير خيام اوربيه حفلات بالخبر
 خيام مناسبات للايجار
     </p>
-  <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
@@ -605,29 +658,38 @@
 تأجير جلسات مرتفعة 
 تأجير جلسات ارضيه
     </p>
-<div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+<div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
@@ -659,29 +721,38 @@
 صبابات 
 ضيافه
     </p>
-   <div class="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0;">
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب">
+  <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
       alt="واتساب" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 
-  <a href="tel:0559534118" aria-label="اتصال مباشر">
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
     <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Phone_icon.svg" 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
       alt="اتصال" 
-      width="48" 
-      height="48" 
-      style="cursor: pointer;"
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
     />
   </a>
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
