--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تواصل معنا – النيزك للحفلات</title>
+  <title>تواصل معنا – لمسات للحفلات</title>
   <meta name="description" content="تواصل معنا في النيزك للحفلات لحجز خدمات تأجير الكنب، الطاولات، الكراسي، الخيام، الصوتيات والمزيد. نخدم الرياض والمنطقة الشرقية." />
   <style>
     body {
