--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
     "name": "حفلات ومناسبات",
   }
   </script>
+
+  <!-- Redirect from GitHub URL to custom domain -->
+<script>
+  if (location.hostname === "almeteor.github.io") {
+    location.href = "https://www.lamasat.store";
+  }
+</script>
+  
 </head>
 <body>
 
