--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي – تأجير مستلزمات الحفلات والمناسبات</title>
   <meta name="description" content="أفضل خدمات تأجير طاولات وكراسي وتأجير كنب ومكبرات صوت وخيام وجلسات شعبية وقهوجيين وصبابين في الشرقية. اتصل الآن 0559534118" />
+  google-site-verification=yRSQeaHeFhDl2UOi6NRZaH4wtcYdyV6d5GcYiqSbRQI
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
     * {
