--- a/index.html
+++ b/index.html
@@ -128,13 +128,15 @@
       }
     }
   </style>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "حفلات ومناسبات",
-  }
-  </script>
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "حفلات ومناسبات",
+  "url": "https://lamasat.store",
+  "logo": "https://lamasat.store/logo.png"
+}
+</script>
 
   <!-- Redirect from GitHub URL to custom domain -->
 <script>
