--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تأجير طاولات وكراسي – تأجير مستلزمات الحفلات والمناسبات</title>
-  <meta name="description" content="أفضل خدمات تأجير طاولات وكراسي وتأجير كنب ومكبرات صوت وخيام وجلسات شعبية وقهوجيين وصبابين في الشرقية. اتصل الآن 0559534118" />
+
+ <link rel="canonical" href="https://www.lamasat.store/" />
+  
+  <title>تأجير كراسي وطاولات وكنب - لمسات للحفلات</title>
+<meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة داخل السعودية. تأجير كراسي، طاولات، كنب، ديكورات، جلسات شعبية والمزيد.">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
     * {
