--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
   <div class="container">
     <h1>من نحن</h1>
     <p>
-      النيزك للحفلات شركة متخصصة في <strong>تأجير مستلزمات الحفلات والمناسبات</strong> منذ عام <strong>2014</strong>.
+      لمسات للحفلات شركة متخصصة في <strong>تأجير مستلزمات الحفلات والمناسبات</strong> منذ عام <strong>2014</strong>.
       نقدم خدماتنا في منطقة <strong>الرياض والشرقية</strong> بأعلى مستوى من الجودة والاحترافية.
     </p>
 
