--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تواصل معنا – لمسات للحفلات</title>
-  <meta name="description" content="تواصل معنا في النيزك للحفلات لحجز خدمات تأجير الكنب، الطاولات، الكراسي، الخيام، الصوتيات والمزيد. نخدم الرياض والمنطقة الشرقية." />
+  <meta name="description" content="تواصل معنا في لمسات للحفلات لحجز خدمات تأجير الكنب، الطاولات، الكراسي، الخيام، الصوتيات والمزيد. نخدم الرياض والمنطقة الشرقية." />
   <style>
     body {
       font-family: 'Cairo', sans-serif;
