--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير كراسي وطاولات وكنب - لمسات للحفلات</title>
   <link rel="canonical" href="https://www.lamasat.store/" />
-<meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة داخل السعودية. تأجير كراسي، طاولات، كنب، ديكورات، جلسات شعبية والمزيد.">
-  <h1>تم نقل الموقع إلى <a href="https://www.lamasat.store/">lamasat.store</a></h1>
+  <meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة داخل السعودية. تأجير كراسي، طاولات، كنب، ديكورات، جلسات شعبية والمزيد.">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
     * {
@@ -139,14 +138,12 @@
   "logo": "https://lamasat.store/logo.png"
 }
 </script>
-
   <!-- Redirect from GitHub URL to custom domain -->
 <script>
-  if (location.hostname === "almeteor.github.io") {
-    location.href = "https://www.lamasat.store";
+  if(window.location.hostname === "almeteor.github.io") {
+    window.location.replace("https://www.lamasat.store");
   }
 </script>
-  
 </head>
 <body>
 
