--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>تأجير كراسي وطاولات وكنب - لمسات للحفلات</title>
   <link rel="canonical" href="https://www.lamasat.store/" />
   <meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة داخل السعودية. تأجير كراسي، طاولات، كنب، ديكورات، جلسات شعبية والمزيد.">
+ <meta http-equiv="refresh" content="0;url=https://www.lamasat.store/" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
     * {
