--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 <main>
 
-<h1>تأجير طاولات وكراسي وتأجير كنب ومستلزمات الحفلات والمناسبات في الرياض</h1>
+<h1>تأجير طاولات وكراسي وتأجير كنب ومستلزمات الحفلات والمناسبات في الرياض والشرقية وجدة</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
