--- a/index.html
+++ b/index.html
@@ -587,6 +587,24 @@ style="margin: 0 10px;">
 تاجير مكبرات صوت 
 سماعات للتأجير 
 سماعات للايجار 
+تاجير مكيفات الرياض 
+تاجير مكيفات 
+تاجير مكيفات جدة 
+تاجير مكيفات الدمام 
+تاجير مكيفات الخبر 
+تاجير مكيفات فريون 
+تاجير مكيفات صحراوي 
+مكيفات للإيجار 
+مكيفات 
+تاجير دفايات الرياض 
+تاجير دفايات الدمام 
+تاجير دفايات الخبر 
+تاجير دفايات 
+دفايات الرياض 
+دفايات الدمام 
+دفايات الخبر 
+دفايات 
+دفايات للايجار
 تاجير شاشات 
 تاجير شاشات معارض 
 تاجير شاشات الرياض 
@@ -612,7 +630,25 @@ style="margin: 0 10px;">
 تايجر ليزرات جدة 
 شاشات عرض 
 شاشات للإيجار  
-      نوفر لك معدات صوت قوية مع خدمات تركيب وتشغيل احترافية. تأجير سماعات موثوق به واستفد من خبرتنا في تجهيزات الصوت. نحن نضمن لك أن تتمتع بتجربة استخدام مريحة وتأثير صوتي رائع لحفلتك. احجز سماعاتك الآن واستعد لتجربة صوتية لا تُنسى في حفلتكِ
+   تاجير مكيفات الرياض 
+تاجير مكيفات 
+تاجير مكيفات جدة 
+تاجير مكيفات الدمام 
+تاجير مكيفات الخبر 
+تاجير مكيفات فريون 
+تاجير مكيفات صحراوي 
+مكيفات للإيجار 
+مكيفات 
+
+تاجير دفايات الرياض 
+تاجير دفايات الدمام 
+تاجير دفايات الخبر 
+تاجير دفايات 
+دفايات الرياض 
+دفايات الدمام 
+دفايات الخبر 
+دفايات 
+دفايات للايجار   نوفر لك معدات صوت قوية مع خدمات تركيب وتشغيل احترافية. تأجير سماعات موثوق به واستفد من خبرتنا في تجهيزات الصوت. نحن نضمن لك أن تتمتع بتجربة استخدام مريحة وتأثير صوتي رائع لحفلتك. احجز سماعاتك الآن واستعد لتجربة صوتية لا تُنسى في حفلتكِ
 تاجير سماعات 
 تاجير سماعات الدمام 
 تاجير سماعات الرياض 
@@ -632,7 +668,26 @@ style="margin: 0 10px;">
 تاجير حواجز 
 تاجير ممرات 
 تاجير سجاد 
-تاجير زل 
+تاجير زل
+تاجير مكيفات الرياض 
+تاجير مكيفات 
+تاجير مكيفات جدة 
+تاجير مكيفات الدمام 
+تاجير مكيفات الخبر 
+تاجير مكيفات فريون 
+تاجير مكيفات صحراوي 
+مكيفات للإيجار 
+مكيفات 
+
+تاجير دفايات الرياض 
+تاجير دفايات الدمام 
+تاجير دفايات الخبر 
+تاجير دفايات 
+دفايات الرياض 
+دفايات الدمام 
+دفايات الخبر 
+دفايات 
+دفايات للايجار    
 تاجير سجاد الرياض 
 تاجير سجاد الدمام 
 تاجير سجاد الخبر 
