--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
 <header>
   <div class="logo">حفلات ومناسبات</div>
   <nav>
-    <a href="#karasy">تأجير كراسي</a>
     <a href="#kanab">تأجير كنب</a>
     <a href="#samaat">تأجير مكبرات صوت</a>
     <a href="#khiyam">تأجير خيام</a>
@@ -192,64 +191,6 @@
  
 style="margin: 0 10px;">
   
-
-  <!-- تأجير كراسي -->
-  <section id="karasy" class="service">
-    <h2>تأجير كراسي مميزة وفخمة لجميع المناسبات</h2>
-    <div class="images-container">
-     <img src="https://i.postimg.cc/3JRnTVQb/IMG-2570.jpg" />
-<img src="https://i.postimg.cc/vHfLbsSh/241cf55b-8ebb-415e-ae8c-6e8d3c51cde2.jpg" />
-<img src="https://i.postimg.cc/XvyP0hd0/b24cdcd4-22af-497e-ab20-d23561c54338.jpg" />
-<img src="https://i.postimg.cc/wMFfVd8D/569bc5aa-335f-483e-beb3-82ded3f96f17.jpg" />
-<img src="https://i.postimg.cc/Tw6tvPTr/6e87e1b1-7a4a-46ca-95c5-2e2eca8fa927.jpg" />
-<img src="https://i.postimg.cc/tgC7ffTR/IMG-2317.jpg" />
-    </div>
-    <p class="content">
-      لمسات توفر تأجير كراسي شفافة، كراسي عادية، كراسي ملكي، وكراسي ملكي ثلاثي بأعلى جودة وفخامة. تأجير كراسي للمناسبات والحفلات بأفضل الأسعار في الرياض.  
-      استمتع بخدمة تأجير كراسي تناسب حفلاتك بكل أذواقك، مع ضمان النظافة والراحة والأناقة.  
-      لمسات للحفلات هو الخيار الأمثل لتنظيم جلسات راقية ومريحة. هل تخطط لتنظيم حفلة أو مناسبة خاصة في الدمام أو الخبر؟ هل تبحث عن خدمة تأجير كراسي ملكية او كراسي عادية ذات جودة عالية وأسعار مناسبة؟ إذاً فإن لمسات للحفلات هي الحل الأمثل لك.
-توفر لمسات للحفلات خدمات تأجير الكراسي الملكية والكراسي الشفافه في مختلف المناسبات والفعاليات، سواء كانت عائلية أو تجارية، بما في ذلك الأعراس، الحفلات الخاصة، المؤتمرات، والمعارض. ويقدم فريق عملنا خدمة استثنائية لجميع العملاء، حيث يتم التركيز على تلبية جميع الاحتياجات الخاصة بك بأفضل الطرق الممكنة.
-نحن نتميز في لمسات للحفلات بتوفير جودة وتشكيلة الكراسي الملكي والكراسي الشفافه التي نقدمها، حيث يتم اختيار الكراسي بجميع أنواعها بعناية فائقة لتلبية جميع متطلبات العملاء. بالإضافة إلى ذلك، فإننا نوفر أسعاراً مناسبة لكافة الخدمات التي نقدمها، بحيث يتم توفير الخدمة المثالية لجميع العملاء بأفضل الأسعار.
-تأجير كراسي ملكي 
-تأجير كراسي شفاف 
-تأجير كراسي 
-تأجير كراسي ملكي ثلاثي 
-تأجير كراسي ملكيه 
-تأجير كراسي شفافة
-    </p>
- <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
-  <!-- زر واتساب -->
-  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
-    <img 
-      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
-      alt="واتساب" 
-      width="60" 
-      height="60" 
-      style="cursor: pointer;" 
-    />
-  </a>
-
-  <!-- زر اتصال -->
-  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
-    <img 
-      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
-      alt="اتصال" 
-      width="60" 
-      height="60" 
-      style="cursor: pointer;" 
-    />
-  </a>
-</div>
-
-<style>
-  .contact-buttons a img {
-    transition: transform 0.3s ease;
-  }
-  .contact-buttons a:hover img {
-    transform: scale(1.2);
-  }
-</style>
-
  <!- تأجير طاولات وكراسي -->
   <section id="samaat" class="service">
     <h2>تأجير طاولات وكراسي تأجير طاولات</h2>
@@ -264,7 +205,12 @@ style="margin: 0 10px;">
     </div>
     <p class="content">
     استمتع بتجربة استئجار طاولات حفلات عالية الجودة. نحن نوفر طاولات وكراسي حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة. احجز طاولات وكراسي حفلات و مناسبات القادمة بسهولة وبأسعار مناسبة
-تواصل معنا الآن ايجار طاولات وكراسي الحفلات . نحن في لمسات نوفر طاولات طعام للايجار وكراسي استقبال تتميز بالأناقة والراحة. اخترنا لتجربة استئجار طاولات وكراسي استثنائية .تاجير طاولات وكراسي 
+تواصل معنا الآن ايجار طاولات وكراسي الحفلات .تأجير كراسي ملكي 
+تأجير كراسي شفاف 
+تأجير كراسي 
+تأجير كراسي ملكي ثلاثي 
+تأجير كراسي ملكيه 
+تأجير كراسي شفافة نحن في لمسات نوفر طاولات طعام للايجار وكراسي استقبال تتميز بالأناقة والراحة. اخترنا لتجربة استئجار طاولات وكراسي استثنائية .تاجير طاولات وكراسي 
 تاجير كراسي وطاولات 
 تاجير كراسي 
 تاجير طاولات 
@@ -286,7 +232,12 @@ style="margin: 0 10px;">
 تاجير كراسي الخبر 
 طاولات وكراسي
 في لمسات للفعاليات والمناسبات، لا شيء يمكن أن يُضف لمسة من الجمال والراحة إلى مكان الحدث مثل تاجير طاولات وكراسي. إنها العناصر الأساسية التي تلعب دورًا حاسمًا في تحقيق النجاح وإبهار الضيوف. في هذا المقال، سنتناول دور هذه الخدمة الرائعة في تحويل أي مناسبة إلى تجربة لا تُنسى.
-
+تأجير كراسي ملكي 
+تأجير كراسي شفاف 
+تأجير كراسي 
+تأجير كراسي ملكي ثلاثي 
+تأجير كراسي ملكيه 
+تأجير كراسي شفافة
 تاجير طاولات وكراسي: الأساس لبدء المناسبة بقوة
 
 عندما يتعلق الأمر تاجير طاولات وكراسي، فإنه يجب أن نعلم أنها ليست مجرد عناصر ديكور عادية. إنها تلعب دورًا مهمًا جدًا في إنشاء بيئة مريحة وتحديد الهوية البصرية للمكان. يمكنك اختيار أنماط وأحجام مختلفة تلبي احتياجات حدثك بشكل مثالي.
@@ -312,7 +263,12 @@ style="margin: 0 10px;">
 تاجير كراسي الدمام 
 تاجير كراسي الخبر 
 طاولات وكراسي
-
+تأجير كراسي ملكي 
+تأجير كراسي شفاف 
+تأجير كراسي 
+تأجير كراسي ملكي ثلاثي 
+تأجير كراسي ملكيه 
+تأجير كراسي شفافة
 النجاح يأتي مع ميزانية مناسبة. لذا، من المهم أن تبحث عن خدمة تقدم تاجير بأسعار معقولة وفعالة من حيث التكلفة. إنها فرصة لتحقيق القيمة المضافة لحدثك دون الإفراط في الإنفاق.
 
 تاجير طاولات وكراسي للمناسبات: أكثر من مجرد أثاث
