--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
  
 style="margin: 0 10px;">
   
- <!- تأجير طاولات وكراسي -->
+ <!-- تأجير طاولات وكراسي -->
   <section id="samaat" class="service">
     <h2>تأجير طاولات وكراسي تأجير طاولات</h2>
      <div class="images-container">
@@ -402,7 +402,7 @@ style="margin: 0 10px;">
   
   <!-- تأجير كنب -->
   <section id="kanab" class="service">
-    <h2>تأجير كنب ملكي ومخمل وثلاثي بأفخم التصاميم</h2>
+    <h2>تأجير كنب تاجير كنب ثلاثي بأفخم التصاميم</h2>
     <div class="images-container">
      <img src="https://i.postimg.cc/ZKbR0288/a3cfc92d-e51d-47c8-a4c5-02553e010ed6.jpg" />
 <img src="https://i.postimg.cc/8PzpTWGw/118ef08a-9091-42d7-8aaf-157ef8869f44.jpg" />
