--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
   <div class="logo">حفلات ومناسبات</div>
   <nav>
     <a href="#kanab">تأجير كنب</a>
+    <a href="#tables-chairs">تأجير طاولات وكراسي</a>
     <a href="#samaat">تأجير مكبرات صوت</a>
     <a href="#khiyam">تأجير خيام</a>
     <a href="#jalsat">تأجير جلسات شعبية</a>
